# scientific-assistant-interface

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: docker-image.yaml
src/: chat.py  streamlit_app.py  utils.py
src/configs/: config.py  logger.py
src/templates/: singleton.py
tests/: test_bypass.py
